<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ElementosFijos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"

            android:orientation="vertical"
            tools:ignore="ExtraText">


            <TextView
                android:id="@+id/tvnombrearea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:editable="true"
                android:fontFamily="@font/inter_medium"
                android:text="@string/nombarea"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/tvelementofijo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:editable="true"
                android:fontFamily="@font/inter_medium"
                android:text="@string/elementofijo"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/nombreef"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/inter"
                android:hint="@string/nombrelementofijohint"
                android:inputType="text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvdimension"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="@string/dimensionamiento"
                android:textSize="20sp" />


            <RadioGroup
                android:id="@+id/rgdimensionamiento"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbrectangular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:fontFamily="@font/inter"
                    android:onClick="mostrardimension"
                    android:text="@string/rbrectang" />

                <RadioButton
                    android:id="@+id/rbcircular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter"
                    android:onClick="mostrardimension"
                    android:text="@string/rbcircu" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/lyrectangular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/tvlargor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/largo"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/largor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/inter"
                        android:inputType="number|numberDecimal"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvanchor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/ancho"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/anchor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/inter"
                        android:inputType="number|numberDecimal"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvaltor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/alto"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/altor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/inter"
                        android:inputType="number|numberDecimal"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lycircular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <TextView
                        android:id="@+id/tvaltoc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/alto"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/altocir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/inter"
                        android:inputType="number|numberDecimal"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvradioc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/radio"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/radioc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/inter"
                        android:inputType="number|numberDecimal"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tvlados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/lados"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvladosdesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/ladosdesc" />

            <EditText
                android:id="@+id/ladosn"
                android:layout_width="164dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:fontFamily="@font/inter"
                android:inputType="number"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tvcantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/cantidad"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvcantdesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/cantdesc" />

            <EditText
                android:id="@+id/cantidadn"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/tvalmacenamiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/almacenamiento"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rgalmacenamiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/rbopsi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:fontFamily="@font/inter"
                    android:onClick="mostraralmacenamiento"
                    android:text="@string/rbopsi" />

                <RadioButton
                    android:id="@+id/rbopno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:fontFamily="@font/inter"
                    android:onClick="mostraralmacenamiento"
                    android:text="@string/rbopno" />


            </RadioGroup>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:id="@+id/lyopsi"
                    android:layout_width="161dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tvlargoa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/largo"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/largoalm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/inter"
                        android:inputType="number|numberDecimal"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvanchoa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/ancho"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/anchoalm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number|numberDecimal"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvaltoa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/alto"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/altoalm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number|numberDecimal"
                        android:textSize="16sp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyalmacenamiento"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvcantidadalm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/cantidadal"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvcantalm1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:text="@string/cantalm" />

                <EditText
                    android:id="@+id/cantidadalmacenamiento"
                    android:layout_width="166dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/btatrasef"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:onClick="atrasef"
                    android:text="@string/btatras"
                    android:textAllCaps="false"
                    android:textColor="@color/atras" />

                <Button
                    android:id="@+id/btanadiref"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/botoneditores"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:text="@string/btanadir" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>